# Bring-Voice-Assitant

./: .gitignore  Cargo.toml  README.md  build.rs
protos/: shopping_assistant.proto  shopping_assistant_pb2.py  shopping_assistant_pb2_grpc.py
python/: .gitignore  Pipfile  llm.py  main.py  requirements.txt
src/: http_client.rs  main.rs  wav_recorder.rs
